# obstacle_avoidance

./: .gitignore  CMakeLists.txt  README.md  Untitled.ipynb  package.xml
circular_motion_traj/: Untitled.ipynb  data2.mat  data_indoor.mat  data_outdoor.mat  outdoor_data.mat  test2.m
include/: casadiOptim.h  obstacleMap.h  polynomialOptim.h
src/: casadiOptim.cpp  main.cpp  obstacleMap.cpp  polynomialOptim.cpp
