<package format="2">
    <name>casadi_test</name>
    <version>1.2.4</version>
    <description>
        This package provides CasADi based optimization.
    </description>
    <maintainer email="liuqishuai@autelrobotics.cn">liuqishuai_R21022</maintainer>
    <license>Proprietary</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>circular_map</depend>
    <depend>nav_msgs</depend>>
</package>