<package format="2">
    <name>optimized_test</name>
    <version>1.2.4</version>
    <description>
        This package provides nonlinear programming based optimization.
    </description>
    <maintainer email="liuqs1216@gmail.com">liuqishuai</maintainer>
    <license>Proprietary</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>circular_map</depend>
    <depend>nav_msgs</depend>>
</package>
